Fixed all compiler and doc warnings
Signed-off-by: jasperpotts <jasperpotts@users.noreply.github.com>